--- a/app/pages/promotions.html
+++ b/app/pages/promotions.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Доктор-профиль</title>
+	<title>Акции</title>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/fonts.css">
 	<link rel="stylesheet" href="../css/owl.carousel.css">
@@ -72,65 +72,81 @@
 						<a class="breadcrumbs-link" href="#">Главная</a>
 					</li>
 					<li class="breadcrumbs-item">
-						<a class="breadcrumbs-link" href="#">Врачи</a>
-					</li>
-					<li class="breadcrumbs-item">
-						Бельды Николай Олегович
+						Акции и скидки
 					</li>
 				</ul>
 			</div>
 		</section>
 
-		<section class="doctor-block">
+		<section class="promotions-block">
 			<div class="container">
-				<h1 class="doctor-block__title">
-					Бельды Николай Олегович
-				</h1>
-				<div class="doctor-block__prof">
-					Врач стоматолог-ортопед
-				</div>
-				<div class="row">
-					<div class="col-sm-6">
-						<ul class="doctor-block__ability-list">
-							<li class="doctor-block__ability-item">
-								<div class="doctor-ability-item__title">Образование:</div>
-								<div class="doctor-ability-item__description">Дальневосточный государственный медицинский университет.</div>
-							</li>
-							<li class="doctor-block__ability-item">
-								<div class="doctor-ability-item__title">Дополнительное образование:</div>
-								<div class="doctor-ability-item__description">
-									Систематическое прохождение сертификационных курсов повышения квалификации, специализация «Биомеханика в ортодонтии. Лингвальная ортодонтия с 2D брекетами» (Германия), «Диагностика зубочелюстных аномалий. Планирование и прогнозирование результатов лечения. Диагностика и лечение мезиальной окклюзии».
-								</div>
-								<a href="#" class="doctor-ability-item__link">Истории лечения (3)</a>
-							</li>
-							<li class="doctor-block__ability-item">
-								<div class="doctor-ability-item__title">График-работы:</div>
-								<ul class="doctor-ability-item__list">
-									<li class="doctor-ability-item__item">
-										<div class="doctor-ability-item__left-time">Понедельник - Пятница</div>
-										<div class="doctor-ability-item__right-time">10:00 — 21:00</div>
-									</li>
-									<li class="doctor-ability-item__item">
-										<div class="doctor-ability-item__left-time">Суббота</div>
-										<div class="doctor-ability-item__right-time">12:00 — 21:00</div>
-									</li>
-									<li class="doctor-ability-item__item">
-										<div class="doctor-ability-item__left-time">Воскресенье</div>
-										<div class="doctor-ability-item__right-time">Выходной</div>
-									</li>
-								</ul>
-							</li>
-						</ul>
-						<div class="row">
-							<div class="col-sm-6">
-								<a href=".enroll-pop-up" class="btn_default doctor-block__link" data-toggle="modal">Записаться на прием</a>
+				<h1 class="promotions-block__title">Акции и скидки</h1>
+				<ul class="promotions-block__list">
+					<li class="promotions-block__item row">
+						<div class="col-sm-3">
+							<div class="promotions-block__img-container img-container">
+								<img src="../images/icon_procent.svg" alt="img" class="promotions-block__img img-responsive">
 							</div>
 						</div>
-						<div class="doctor-block__img-container img-container">
-							<img src="../images/all-docs-1@3x.png" alt="img" class="doctor-block__img img-responsive">
+						<div class="col-sm-9 promotion-block__item_right">
+							<h2 class="promotions-block__item-title">
+								Санация полости рта, протезирование, имплантация, детская стоматология со скидкой до 10%!
+							</h2>
+							<div class="promotions-block__item-description">
+								Приходите в нашу клинику всей семьей (не менее двух человек) и получите скидку 10% на терапевтическую санацию полости рта и детскую стоматологию. На протезирование и имплантацию скидка составляет 5%.
+							</div>
+							<a href=".enroll-pop-up" class="promotions-block__item-link btn_default" data-toggle="modal">Записаться на прием</a>
 						</div>
-					</div>
-				</div>
+					</li>
+					<li class="promotions-block__item row">
+						<div class="col-sm-3">
+							<div class="promotions-block__img-container img-container">
+								<img src="../images/icon_tooth.svg" alt="img" class="promotions-block__img img-responsive">
+							</div>
+						</div>
+						<div class="col-sm-9 promotion-block__item_right">
+							<h2 class="promotions-block__item-title">
+								Лечите зубы сейчас, платите через год!
+							</h2>
+							<div class="promotions-block__item-description">
+								Оформите лечение зубов в рассрочку на 12 месяцев и более прямо в клинике. Наши специалисты проконсультируют Вас, составят план лечения и сразу же приступят к процедуре оформления рассрочки, которая займет не более 40 минут. От Вас потребуется только паспорт.
+							</div>
+							<a href=".enroll-pop-up" class="promotions-block__item-link btn_default" data-toggle="modal">Записаться на прием</a>
+						</div>
+					</li>
+					<li class="promotions-block__item row">
+						<div class="col-sm-3">
+							<div class="promotions-block__img-container img-container">
+								<img src="../images/icon_woman.svg" alt="img" class="promotions-block__img img-responsive">
+							</div>
+						</div>
+						<div class="col-sm-9 promotion-block__item_right">
+							<h2 class="promotions-block__item-title">
+								Здоровые зубы - лучшее вложение материнского капитала!
+							</h2>
+							<div class="promotions-block__item-description">
+								Оплатите стоматологические услуги в нашей клинике средствами из материнского капитала. Наши специалисты помогут Вам подготовить документы для подачи в государственные органы, и Вы сможете начать лечение по намеченному плану сразу же после поступления денежных средств на счет клиники.
+							</div>
+							<a href=".enroll-pop-up" class="promotions-block__item-link btn_default" data-toggle="modal">Записаться на прием</a>
+						</div>
+					</li>
+					<li class="promotions-block__item row">
+						<div class="col-sm-3">
+							<div class="promotions-block__img-container img-container">
+								<img src="../images/icon_returnrub.svg" alt="img" class="promotions-block__img img-responsive">
+							</div>
+						</div>
+						<div class="col-sm-9 promotion-block__item_right">
+							<h2 class="promotions-block__item-title">
+								Возвращаем деньги за лечение!
+							</h2>
+							<div class="promotions-block__item-description">
+								Лечите зубы в нашей клинике, и мы поможем Вам подать документы в Федеральную Налоговую Службу на получение налогового вычета в размере 13%.
+							</div>
+							<a href=".enroll-pop-up" class="promotions-block__item-link btn_default" data-toggle="modal">Записаться на прием</a>
+						</div>
+					</li>
+				</ul>
 			</div>
 		</section>
 
