--- a/app/pages/services.html
+++ b/app/pages/services.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Доктор-профиль</title>
+	<title>Услуги</title>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/fonts.css">
 	<link rel="stylesheet" href="../css/owl.carousel.css">
@@ -72,65 +72,168 @@
 						<a class="breadcrumbs-link" href="#">Главная</a>
 					</li>
 					<li class="breadcrumbs-item">
-						<a class="breadcrumbs-link" href="#">Врачи</a>
-					</li>
-					<li class="breadcrumbs-item">
-						Бельды Николай Олегович
+						Услуги
 					</li>
 				</ul>
 			</div>
 		</section>
 
-		<section class="doctor-block">
+		<section class="services-block">
 			<div class="container">
-				<h1 class="doctor-block__title">
-					Бельды Николай Олегович
+				<h1 class="all-doctors-block__title history-block__title">
+					Услуги
 				</h1>
-				<div class="doctor-block__prof">
-					Врач стоматолог-ортопед
-				</div>
-				<div class="row">
-					<div class="col-sm-6">
-						<ul class="doctor-block__ability-list">
-							<li class="doctor-block__ability-item">
-								<div class="doctor-ability-item__title">Образование:</div>
-								<div class="doctor-ability-item__description">Дальневосточный государственный медицинский университет.</div>
-							</li>
-							<li class="doctor-block__ability-item">
-								<div class="doctor-ability-item__title">Дополнительное образование:</div>
-								<div class="doctor-ability-item__description">
-									Систематическое прохождение сертификационных курсов повышения квалификации, специализация «Биомеханика в ортодонтии. Лингвальная ортодонтия с 2D брекетами» (Германия), «Диагностика зубочелюстных аномалий. Планирование и прогнозирование результатов лечения. Диагностика и лечение мезиальной окклюзии».
-								</div>
-								<a href="#" class="doctor-ability-item__link">Истории лечения (3)</a>
-							</li>
-							<li class="doctor-block__ability-item">
-								<div class="doctor-ability-item__title">График-работы:</div>
-								<ul class="doctor-ability-item__list">
-									<li class="doctor-ability-item__item">
-										<div class="doctor-ability-item__left-time">Понедельник - Пятница</div>
-										<div class="doctor-ability-item__right-time">10:00 — 21:00</div>
-									</li>
-									<li class="doctor-ability-item__item">
-										<div class="doctor-ability-item__left-time">Суббота</div>
-										<div class="doctor-ability-item__right-time">12:00 — 21:00</div>
-									</li>
-									<li class="doctor-ability-item__item">
-										<div class="doctor-ability-item__left-time">Воскресенье</div>
-										<div class="doctor-ability-item__right-time">Выходной</div>
-									</li>
-								</ul>
-							</li>
-						</ul>
-						<div class="row">
-							<div class="col-sm-6">
-								<a href=".enroll-pop-up" class="btn_default doctor-block__link" data-toggle="modal">Записаться на прием</a>
+				<ul class="history-block__categories-list">
+					<li class="history-block__categories-item active">
+						<a href="#" class="history-block__categories-link">Все категории</a>
+					</li>
+					<li class="history-block__categories-item">
+						<a href="#" class="history-block__categories-link">Лечение зубов</a>
+					</li>
+					<li class="history-block__categories-item">
+						<a href="#" class="history-block__categories-link">Имплантация</a>
+					</li>
+					<li class="history-block__categories-item">
+						<a href="#" class="history-block__categories-link">Протезирование</a>
+					</li>
+					<li class="history-block__categories-item">
+						<a href="#" class="history-block__categories-link">Брекеты</a>
+					</li>
+					<li class="history-block__categories-item">
+						<a href="#" class="history-block__categories-link">Лечение десен</a>
+					</li>
+					<li class="history-block__categories-item">
+						<a href="#" class="history-block__categories-link">Удаление зубов</a>
+					</li>
+					<li class="history-block__categories-item">
+						<a href="#" class="history-block__categories-link">Хирургия</a>
+					</li>
+					<li class="history-block__categories-item">
+						<a href="#" class="history-block__categories-link">Гигиена</a>
+					</li>
+					<li class="history-block__categories-item">
+						<a href="#" class="history-block__categories-link">Отбеливание зубов</a>
+					</li>
+				</ul>
+				<ul class="services-block__services-list row">
+					<li class="services-block__services-item col-sm-4">
+						<a href="#" class="services-block__services-link">
+							<div class="services-block__item-img-container img-container">
+								<img src="../images/services_1.png" alt="img" class="services-block__item-img img-responsive">
 							</div>
-						</div>
-						<div class="doctor-block__img-container img-container">
-							<img src="../images/all-docs-1@3x.png" alt="img" class="doctor-block__img img-responsive">
-						</div>
-					</div>
-				</div>
+							<div class="services-block__item-title">
+								Брекеты
+							</div>
+							<div class="services-block__item-description">
+								Cапфировые брекеты – красиво, надежно, эффективно
+							</div>
+						</a>
+					</li>
+					<li class="services-block__services-item col-sm-4">
+						<a href="#" class="services-block__services-link">
+							<div class="services-block__item-img-container img-container">
+								<img src="../images/services_1.png" alt="img" class="services-block__item-img img-responsive">
+							</div>
+							<div class="services-block__item-title">
+								Брекеты
+							</div>
+							<div class="services-block__item-description">
+								Cапфировые брекеты – красиво, надежно, эффективно
+							</div>
+						</a>
+					</li>
+					<li class="services-block__services-item col-sm-4">
+						<a href="#" class="services-block__services-link">
+							<div class="services-block__item-img-container img-container">
+								<img src="../images/services_1.png" alt="img" class="services-block__item-img img-responsive">
+							</div>
+							<div class="services-block__item-title">
+								Брекеты
+							</div>
+							<div class="services-block__item-description">
+								Cапфировые брекеты – красиво, надежно, эффективно
+							</div>
+						</a>
+					</li>
+					<li class="services-block__services-item col-sm-4">
+						<a href="#" class="services-block__services-link">
+							<div class="services-block__item-img-container img-container">
+								<img src="../images/services_2.png" alt="img" class="services-block__item-img img-responsive">
+							</div>
+							<div class="services-block__item-title">
+								Брекеты
+							</div>
+							<div class="services-block__item-description">
+								Cапфировые брекеты – красиво, надежно, эффективно
+							</div>
+						</a>
+					</li>
+					<li class="services-block__services-item col-sm-4">
+						<a href="#" class="services-block__services-link">
+							<div class="services-block__item-img-container img-container">
+								<img src="../images/services_2.png" alt="img" class="services-block__item-img img-responsive">
+							</div>
+							<div class="services-block__item-title">
+								Брекеты
+							</div>
+							<div class="services-block__item-description">
+								Cапфировые брекеты – красиво, надежно, эффективно
+							</div>
+						</a>
+					</li>
+					<li class="services-block__services-item col-sm-4">
+						<a href="#" class="services-block__services-link">
+							<div class="services-block__item-img-container img-container">
+								<img src="../images/services_2.png" alt="img" class="services-block__item-img img-responsive">
+							</div>
+							<div class="services-block__item-title">
+								Брекеты
+							</div>
+							<div class="services-block__item-description">
+								Cапфировые брекеты – красиво, надежно, эффективно
+							</div>
+						</a>
+					</li>
+					<li class="services-block__services-item col-sm-4">
+						<a href="#" class="services-block__services-link">
+							<div class="services-block__item-img-container img-container">
+								<img src="../images/services_3.png" alt="img" class="services-block__item-img img-responsive">
+							</div>
+							<div class="services-block__item-title">
+								Брекеты
+							</div>
+							<div class="services-block__item-description">
+								Cапфировые брекеты – красиво, надежно, эффективно
+							</div>
+						</a>
+					</li>
+					<li class="services-block__services-item col-sm-4">
+						<a href="#" class="services-block__services-link">
+							<div class="services-block__item-img-container img-container">
+								<img src="../images/services_3.png" alt="img" class="services-block__item-img img-responsive">
+							</div>
+							<div class="services-block__item-title">
+								Брекеты
+							</div>
+							<div class="services-block__item-description">
+								Cапфировые брекеты – красиво, надежно, эффективно
+							</div>
+						</a>
+					</li>
+					<li class="services-block__services-item col-sm-4">
+						<a href="#" class="services-block__services-link">
+							<div class="services-block__item-img-container img-container">
+								<img src="../images/services_3.png" alt="img" class="services-block__item-img img-responsive">
+							</div>
+							<div class="services-block__item-title">
+								Брекеты
+							</div>
+							<div class="services-block__item-description">
+								Cапфировые брекеты – красиво, надежно, эффективно
+							</div>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</section>
 
