99% main page, but gallery need to fix..

--- a/app/index.html
+++ b/app/index.html
@@ -147,14 +147,14 @@
 						</a>
 					</li>
 					<li class="cabinet-block__item col-sm-6">
-						<a href="#" class="cabinet-block__link">
+						<a href=".gallery-pop-up" class="cabinet-block__link" data-toggle="modal">
 							<div class="cabinet-block__img-container img-container">
 								<img src="images/cabinet-2.png" alt="img" class="img-responsive cabinet-block__img">
 							</div>
 						</a>
 					</li>
 					<li class="cabinet-block__item col-sm-6">
-						<a href="#" class="cabinet-block__link">
+						<a href=".gallery-pop-up" class="cabinet-block__link" data-toggle="modal">
 							<div class="cabinet-block__img-container img-container">
 								<img src="images/cabinet-2.png" alt="img" class="img-responsive cabinet-block__img">
 							</div>
@@ -477,7 +477,7 @@
 		<div class="modal fade gallery-pop-up">
 			<div class="gallery-pop-up__dialog container">
 				<div class="gallery-pop__container">
-					<a href="#" class="feedback-pop__close-button" data-dismiss="modal"></a>
+					<a href="#" class="gallery-pop-up__close-button" data-dismiss="modal"></a>
 					<div class="owl-carousel owl-gallery-slider">
 						<div>
 							<div class="owl-gallery-img-container img-container">
@@ -489,6 +489,21 @@
 								<img src="images/bg-general.png" alt="img" class="owl-gallery-img">
 							</div>
 						</div>
+						<div>
+							<div class="owl-gallery-img-container img-container">
+								<img src="images/bg-general.png" alt="img" class="owl-gallery-img">
+							</div>
+						</div>
+						<div>
+							<div class="owl-gallery-img-container img-container">
+								<img src="images/bg-general.png" alt="img" class="owl-gallery-img">
+							</div>
+						</div>
+					</div>
+					<div class="owl-gallery-sliders-count">
+						<span class="owl-gallery-sliders-count__current"></span>
+						<span> / </span>
+						<span class="owl-gallery-sliders-count__all"></span>
 					</div>
 				</div>
 			</div>
